--- a/openalex/OpenAlexScraper.ipynb
+++ b/openalex/OpenAlexScraper.ipynb
@@ -1033,7 +1033,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "openalex_id=\"A5072258662\"\n",
+    "RESULTS_PER_PAGE=200\n",
+    "works_param = {\n",
+    "            \"filter\": f\"author.id:{openalex_id}\",\n",
+    "            'per_page': RESULTS_PER_PAGE,\n",
+    "        }\n",
+    "\n",
+    "works = get_api_response(works_param, url=WORKS_ENDPOINT)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1041,7 +1050,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_api_response"
+    "pprint(works[\"meta\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(works[\"results\"][0].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(works[\"results\"][0][\"title\"])\n",
+    "pprint(works[\"results\"][0][\"authorships\"][1])\n",
+    "pprint([author[\"author\"][\"display_name\"] for author in works[\"results\"][0][\"authorships\"]])"
    ]
   }
  ],
