--- a/openalex/openalex_find_profiles.ipynb
+++ b/openalex/openalex_find_profiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "WORKS_ENDPOINT = \"https://api.openalex.org/works?\"\n",
     "AUTHORS_ENDPOINT = \"https://api.openalex.org/authors?\"\n",
     "API_KEY = \"\"\n",
     "header = {\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +49,12 @@
     "\n",
     "# affil_search_string = \"affil(UBC or University of British Columbia or Djavad Mowafaghian or Simon Fraser University or University of Victoria or University of Washington') and subjarea(NEUR or BIOC or MEDI or PSYC or HEAL or IMMU or NURS or PHAR)\"\n",
     "\n",
-    "cols_of_interest = [\"Authorlist Name\", \"OpenAlex Name\", \"Affiliation\", \"Author ID\", \"ORCID\", \"Research Areas\", \"Warning\"]"
+    "cols_of_interest = [\"Authorlist Name\", \"OpenAlex Name\", \"Author ID\",\"cited_by_count\", \"works_count\", \"h_index\", \"i10_index\", \"Affiliation\", \"ORCID\", \"Research Areas\", \"Warning\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,29 +172,42 @@
     "\n",
     "            subject = [concept[\"display_name\"] for concept in search_json[\"x_concepts\"] if concept[\"level\"]==0]\n",
     "\n",
-    "            out_dict[cols_of_interest[0]].append(authorlist_name) #\"Authorlist Name\"\n",
-    "            out_dict[cols_of_interest[1]].append(display_name) #\"OpenAlex Name\"\n",
-    "            out_dict[cols_of_interest[2]].append(affil_name) #\"Affiliation\"\n",
-    "            out_dict[cols_of_interest[3]].append(author_id) #\"Author ID\"\n",
-    "            out_dict[cols_of_interest[4]].append(orcid) #\"ORCID\"\n",
-    "            out_dict[cols_of_interest[5]].append(subject) #\"Research Areas\"\n",
-    "            out_dict[cols_of_interest[6]].append(warning) \n",
+    "            cited_by = search_json['cited_by_count']\n",
+    "            works_count = search_json['works_count']\n",
+    "            h_index = search_json[\"summary_stats\"][\"h_index\"]\n",
+    "            i10_index = search_json[\"summary_stats\"][\"i10_index\"]\n",
+    "\n",
+    "            out_dict[\"Authorlist Name\"].append(authorlist_name)\n",
+    "            out_dict[\"OpenAlex Name\"].append(display_name) \n",
+    "            out_dict[\"Author ID\"].append(author_id) \n",
+    "            out_dict['cited_by_count'].append(cited_by)\n",
+    "            out_dict[\"works_count\"].append(works_count)\n",
+    "            out_dict[\"h_index\"].append(h_index)\n",
+    "            out_dict[\"i10_index\"].append(i10_index)\n",
+    "            out_dict[\"Affiliation\"].append(affil_name) \n",
+    "            out_dict[\"ORCID\"].append(orcid) \n",
+    "            out_dict[\"Research Areas\"].append(subject) \n",
+    "            out_dict[\"Warning\"].append(warning) \n",
     "        case False:\n",
     "            #add blank rows with warning or affiliation/research area overrides\n",
     "            print(\"No OpenAlex profile found\\n\")\n",
-    "            out_dict[cols_of_interest[0]].append(authorlist_name) #\"Authorlist Name\"\n",
-    "            out_dict[cols_of_interest[1]].append(\"\") #\"OpenAlex Name\"\n",
-    "            out_dict[cols_of_interest[2]].append(\"\") #\"Affiliation\"\n",
-    "            out_dict[cols_of_interest[3]].append(\"\") #\"Author ID\"\n",
-    "            out_dict[cols_of_interest[4]].append(\"\") #\"ORCID\"\n",
-    "            out_dict[cols_of_interest[5]].append(\"\") #\"Research Areas\"\n",
-    "            out_dict[cols_of_interest[6]].append(\"no profiles found\") #\"Warning\"\n",
+    "            out_dict[\"Authorlist Name\"].append(authorlist_name) \n",
+    "            out_dict[\"OpenAlex Name\"].append(\"\") \n",
+    "            out_dict[\"Author ID\"].append(\"\") \n",
+    "            out_dict['cited_by_count'].append(\"\")\n",
+    "            out_dict[\"works_count\"].append(\"\")\n",
+    "            out_dict[\"h_index\"].append(\"\")\n",
+    "            out_dict[\"i10_index\"].append(\"\")\n",
+    "            out_dict[\"Affiliation\"].append(\"\")\n",
+    "            out_dict[\"ORCID\"].append(\"\") \n",
+    "            out_dict[\"Research Areas\"].append(\"\")\n",
+    "            out_dict[\"Warning\"].append(\"no profiles found\") \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -332,18 +346,7 @@
       "\n",
       "searching for author Michael Gordon\n",
       "looking at profile 0\n",
-      "looking at profile 1\n",
-      "looking at profile 2\n",
-      "looking at profile 3\n",
-      "looking at profile 4\n",
-      "looking at profile 5\n",
-      "looking at profile 6\n",
-      "looking at profile 7\n",
-      "looking at profile 8\n",
-      "looking at profile 9\n",
-      "looking at profile 10\n",
-      "looking at profile 11\n",
-      "adding Michael A. Gordon...\n",
+      "adding Michael Gordon...\n",
       "\n",
       "searching for author Leonid Sigal\n",
       "looking at profile 0\n",
@@ -496,13 +499,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save file\n",
     "df = pd.DataFrame.from_dict(output_dict)\n",
-    "df.to_csv(\"openalex_authors.csv\",sep=\"|\",index=False)\n",
+    "df.to_csv(OUTPUT_FILEPATH, sep=\"|\", index=False)\n",
     "# df.to_csv(OUTPUT_FILEPATH)"
    ]
   }
