open alex testing

--- a/ScivalScraper.ipynb
+++ b/ScivalScraper.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "332df0dc-a0ad-4946-a11b-7ea1813766ec",
    "metadata": {},
    "outputs": [
@@ -84,8 +84,8 @@
     "from time import sleep\n",
     "from pybliometrics.scopus import CitationOverview, AuthorRetrieval, AbstractRetrieval\n",
     "from pybliometrics.scopus.utils import config\n",
-    "config['Authentication'] ['APIKey'] = \"127f5bf5de20d338f686704a9a328b86\"\n",
-    "print(config['Authentication'] ['APIKey'])"
+    "# config['Authentication'] ['APIKey'] = <<API KEY HERE>>!!!\n",
+    "# print(config['Authentication'] ['APIKey'])"
    ]
   },
   {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "1637768d-85ae-4f31-9af7-7f9c890eb869",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "27cc98e7-2e5f-47ed-a354-0cf2e471c5b1",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "bb73535e-9cd7-4977-ae10-939aa00d63a0",
    "metadata": {},
    "outputs": [],
