--- a/openalex/OAScraper.ipynb
+++ b/openalex/OAScraper.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "332df0dc-a0ad-4946-a11b-7ea1813766ec",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "8936ef07",
    "metadata": {},
    "outputs": [],
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "id": "1637768d-85ae-4f31-9af7-7f9c890eb869",
    "metadata": {},
    "outputs": [],
    "source": [
     "# !!! Modify this to match the name of your author list CSV file. \n",
     "author_list_csv = \"openalex_authors.csv\"\n",
-    "output_data_csv = \"oa_ss_output_data.csv\""
+    "output_data_csv = \"oa_ss_output_data_articles.csv\""
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "id": "27cc98e7-2e5f-47ed-a354-0cf2e471c5b1",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "id": "bb73535e-9cd7-4977-ae10-939aa00d63a0",
    "metadata": {},
    "outputs": [],
@@ -131,18 +131,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "id": "4e2d2928",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def get_all_document_titles(author_id) -> list:\n",
+    "#     works = get_api_response({\n",
+    "#         \"filter\": f\"author.id:{author_id}\",\n",
+    "#         'per_page': RESULTS_PER_PAGE,\n",
+    "#     }, url=WORKS_ENDPOINT)\n",
+    "\n",
+    "#     documents = [work[\"title\"] for work in works[\"results\"]]\n",
+    "#     total_works = works[\"meta\"][\"count\"]\n",
+    "#     if total_works > RESULTS_PER_PAGE:\n",
+    "#         more_pages = int(total_works/RESULTS_PER_PAGE)\n",
+    "#         for page in range(2, more_pages+2): #start at page 2\n",
+    "#             sleep(1)\n",
+    "#             addl_works = get_api_response({\n",
+    "#                 \"filter\": f\"author.id:{author_id}\",\n",
+    "#                 'per_page': RESULTS_PER_PAGE,\n",
+    "#                 \"page\": page,\n",
+    "#             }, url=WORKS_ENDPOINT)\n",
+    "#             documents += [work[\"title\"] for work in addl_works[\"results\"]]\n",
+    "\n",
+    "#     return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "f87bd3f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## with document type\n",
     "def get_all_document_titles(author_id) -> list:\n",
     "    works = get_api_response({\n",
     "        \"filter\": f\"author.id:{author_id}\",\n",
     "        'per_page': RESULTS_PER_PAGE,\n",
     "    }, url=WORKS_ENDPOINT)\n",
     "\n",
-    "    documents = [work[\"title\"] for work in works[\"results\"]]\n",
+    "    documents = [f'{work[\"title\"]};;{work[\"type\"]}' for work in works[\"results\"]]\n",
     "    total_works = works[\"meta\"][\"count\"]\n",
     "    if total_works > RESULTS_PER_PAGE:\n",
     "        more_pages = int(total_works/RESULTS_PER_PAGE)\n",
@@ -153,14 +183,14 @@
     "                'per_page': RESULTS_PER_PAGE,\n",
     "                \"page\": page,\n",
     "            }, url=WORKS_ENDPOINT)\n",
-    "            documents += [work[\"title\"] for work in addl_works[\"results\"]]\n",
+    "            documents += [f'{work[\"title\"]};;{work[\"type\"]}' for work in addl_works[\"results\"]]\n",
     "\n",
     "    return documents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "id": "4ed9c40e-4e68-4f38-9130-b1d6059bd351",
    "metadata": {},
    "outputs": [
@@ -385,7 +415,7 @@
     "        #    'Publications': pubs,\n",
     "            'Document Count': len(pubs),\n",
     "            }\n",
-    "        # Create list of authors who do not have the specified affiliation\n",
+    "\n",
     "    print(\"complete\\n\")\n",
     "    rows.append(row)\n",
     "                "
@@ -401,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "id": "20cea894-1389-42b5-a718-b282dff645e4",
    "metadata": {
     "tags": []
@@ -431,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "id": "4bbf3aa1",
    "metadata": {},
    "outputs": [
@@ -483,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "id": "765aa4c8-9e4c-45da-a8ff-f7bfddd3a287",
    "metadata": {
     "tags": []
