--- a/openalex/OpenAlexScraper.ipynb
+++ b/openalex/OpenAlexScraper.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- graphs from openalex (done dec 28 2023) - oa_DBC_grouped, oa_DBC_weighted, oa_heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,6 +1018,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,29 +1060,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'count': 236,\n",
+      " 'db_response_time_ms': 41,\n",
+      " 'groups_count': None,\n",
+      " 'page': 1,\n",
+      " 'per_page': 200}\n"
+     ]
+    }
+   ],
    "source": [
     "pprint(works[\"meta\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['id', 'doi', 'title', 'display_name', 'publication_year', 'publication_date', 'ids', 'language', 'primary_location', 'type', 'type_crossref', 'open_access', 'authorships', 'countries_distinct_count', 'institutions_distinct_count', 'corresponding_author_ids', 'corresponding_institution_ids', 'apc_list', 'apc_paid', 'has_fulltext', 'fulltext_origin', 'cited_by_count', 'cited_by_percentile_year', 'biblio', 'is_retracted', 'is_paratext', 'keywords', 'concepts', 'mesh', 'locations_count', 'locations', 'best_oa_location', 'sustainable_development_goals', 'grants', 'referenced_works_count', 'referenced_works', 'related_works', 'ngrams_url', 'abstract_inverted_index', 'cited_by_api_url', 'counts_by_year', 'updated_date', 'created_date'])\n"
+     ]
+    }
+   ],
    "source": [
     "pprint(works[\"results\"][0].keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Plasticity during stroke recovery: from synapse to behaviour'\n",
+      "'article'\n",
+      "{'author': {'display_name': 'Dale Corbett',\n",
+      "            'id': 'https://openalex.org/A5047765476',\n",
+      "            'orcid': 'https://orcid.org/0000-0003-0217-4576'},\n",
+      " 'author_position': 'last',\n",
+      " 'countries': ['CA'],\n",
+      " 'institutions': [{'country_code': 'CA',\n",
+      "                   'display_name': 'Memorial University of Newfoundland',\n",
+      "                   'id': 'https://openalex.org/I130438778',\n",
+      "                   'lineage': ['https://openalex.org/I130438778'],\n",
+      "                   'ror': 'https://ror.org/04haebc03',\n",
+      "                   'type': 'education'}],\n",
+      " 'is_corresponding': False,\n",
+      " 'raw_affiliation_string': 'Biomedical Sciences, Faculty of Medicine, Memorial '\n",
+      "                           \"University of Newfoundland, St. John's, Canada.\",\n",
+      " 'raw_affiliation_strings': ['Biomedical Sciences, Faculty of Medicine, '\n",
+      "                             \"Memorial University of Newfoundland, St. John's, \"\n",
+      "                             'Canada.'],\n",
+      " 'raw_author_name': 'Dale Corbett'}\n",
+      "['Timothy H. Murphy', 'Dale Corbett']\n"
+     ]
+    }
+   ],
    "source": [
     "pprint(works[\"results\"][0][\"title\"])\n",
+    "pprint(works[\"results\"][0][\"type\"])\n",
     "pprint(works[\"results\"][0][\"authorships\"][1])\n",
     "pprint([author[\"author\"][\"display_name\"] for author in works[\"results\"][0][\"authorships\"]])"
    ]
