--- a/tests/scival_find_profiles.ipynb
+++ b/tests/scival_find_profiles.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127f5bf5de20d338f686704a9a328b86\n",
+      "aed73b6c0f9f233daa5f733cf7cfe7d4\n",
       "127f5bf5de20d338f686704a9a328b86\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TO_INPUT_CSV = \"gs_outputs/DMCBH/all_dmcbh_members-simplified.csv\"\n",
+    "PATH_TO_INPUT_CSV = \"authorlist.csv\"\n",
     "OUTPUT_FILEPATH = \"ss_scival_dmcbh.csv\"\n",
     "\n",
     "# https://dev.elsevier.com/sc_author_search_tips.html for list of subjects\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40\n"
+      "47\n"
      ]
     }
    ],
@@ -224,110 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "searching for author Tim H. Murphy\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Timothy H. Murphy...\n",
-      "\n",
-      "searching for author Annie Ciernia\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Annie Vogel-Ciernia...\n",
-      "\n",
-      "searching for author Brian MacVicar\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Brian Archibald MacVicar...\n",
-      "\n",
-      "searching for author Fidel Vila-Rodriguez\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Fidel Vila-Rodriguez...\n",
-      "\n",
-      "searching for author Shernaz Bamji\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Shernaz X. Bamji...\n",
-      "\n",
-      "searching for author Lara Boyd\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Lara A. Boyd...\n",
-      "\n",
-      "searching for author Paul Pavlidis\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Paul Pavlidis...\n",
-      "\n",
-      "searching for author Martin McKeown\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Martin J. McKeown...\n",
-      "\n",
-      "searching for author A Jon Stoessl\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding A. Jon Stoessl...\n",
-      "\n",
-      "searching for author Peter Cripton\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding P. A. Cripton...\n",
-      "\n",
-      "searching for author Jason Snyder\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Jason S. Snyder...\n",
-      "\n",
-      "searching for author Wolfram Tetzlaff\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Wolfram G. Tetzlaff...\n",
-      "\n",
-      "searching for author Anthony Phillips\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: True\n",
-      "adding Anthony G. Phillips...\n",
-      "\n",
-      "searching for author Catharine Winstanley\n",
-      "looking at profile 0\n",
-      "subject match: True\n",
-      "affiliation match: False\n",
-      "adding Catharine A. Winstanley...\n",
-      "\n",
-      "searching for author Yu Tian Wang\n",
-      "looking at profile 0\n",
-      "subject match: False\n",
-      "affiliation match: False\n",
-      "looking at profile 1\n",
-      "subject match: True\n",
-      "affiliation match: False\n",
-      "adding Yu Tian Wang...\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[70], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m member \u001b[39min\u001b[39;00m member_arr:\n\u001b[0;32m      6\u001b[0m     start \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m----> 7\u001b[0m     sleep(\u001b[39m1\u001b[39;49m) \u001b[39m#pause for one second to prevent API warning\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     \u001b[39m#search for author\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     lastname \u001b[39m=\u001b[39m member[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mrsplit(\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m1\u001b[39m)[\u001b[39m1\u001b[39m]\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m sleep(\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m#pause for one second to prevent API warning\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#search for author\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m lastname \u001b[38;5;241m=\u001b[39m \u001b[43mmember\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrsplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     11\u001b[0m firstname \u001b[38;5;241m=\u001b[39m member[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mrsplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m1\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# lastname = member[0].strip()\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# firstname = member[1].strip()\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -383,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,9 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Scopus401Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mScopus401Error\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m firstname \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTodd\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mauthlastname(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlastname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) and authfirst(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfirstname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[43mAuthorSearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m authors \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mauthors\n",
+      "File \u001b[0;32m~/miniconda3/envs/sms/lib/python3.10/site-packages/pybliometrics/scopus/author_search.py:125\u001b[0m, in \u001b[0;36mAuthorSearch.__init__\u001b[0;34m(self, query, refresh, verbose, download, integrity_fields, integrity_action, count, **kwds)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_refresh \u001b[38;5;241m=\u001b[39m refresh\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_view \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTANDARD\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 125\u001b[0m \u001b[43mSearch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquery\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mapi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAuthorSearch\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcount\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcount\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    126\u001b[0m \u001b[43m                \u001b[49m\u001b[43mdownload\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdownload\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverbose\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/sms/lib/python3.10/site-packages/pybliometrics/scopus/superclasses/search.py:62\u001b[0m, in \u001b[0;36mSearch.__init__\u001b[0;34m(self, query, api, count, cursor, download, verbose, **kwds)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_cache_file_path \u001b[38;5;241m=\u001b[39m get_folder(api, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_view)\u001b[38;5;241m/\u001b[39mstem\n\u001b[1;32m     61\u001b[0m \u001b[38;5;66;03m# Init\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m \u001b[43mBase\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mURLS\u001b[49m\u001b[43m[\u001b[49m\u001b[43mapi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdownload\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdownload\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     63\u001b[0m \u001b[43m              \u001b[49m\u001b[43mapi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mapi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/sms/lib/python3.10/site-packages/pybliometrics/scopus/superclasses/base.py:60\u001b[0m, in \u001b[0;36mBase.__init__\u001b[0;34m(self, params, url, api, download, verbose, *args, **kwds)\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_json \u001b[38;5;241m=\u001b[39m loads(fname\u001b[38;5;241m.\u001b[39mread_text())\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 60\u001b[0m     resp \u001b[38;5;241m=\u001b[39m \u001b[43mget_content\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mapi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     61\u001b[0m     header \u001b[38;5;241m=\u001b[39m resp\u001b[38;5;241m.\u001b[39mheaders\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m search_request:\n\u001b[1;32m     63\u001b[0m         \u001b[38;5;66;03m# Get number of results\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/sms/lib/python3.10/site-packages/pybliometrics/scopus/utils/get_content.py:116\u001b[0m, in \u001b[0;36mget_content\u001b[0;34m(url, api, params, **kwds)\u001b[0m\n\u001b[1;32m    114\u001b[0m         \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m    115\u001b[0m             reason \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 116\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m errors[resp\u001b[38;5;241m.\u001b[39mstatus_code](reason)\n\u001b[1;32m    117\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[1;32m    118\u001b[0m     resp\u001b[38;5;241m.\u001b[39mraise_for_status()\n",
+      "\u001b[0;31mScopus401Error\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "lastname = \"Woodward\" \n",
     "firstname = \"Todd\"\n",
@@ -408,34 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Author(eid='9-s2.0-7102848867', orcid='0000-0001-8083-0079', surname='Woodward', initials='T.S.', givenname='Todd Stephen', affiliation='The University of British Columbia', documents=185, affiliation_id='60010365', city='Vancouver', country='Canada', areas='MEDI (203); NEUR (133); PSYC (126)')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(authors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Author(eid='9-s2.0-56371437500', orcid='0000-0001-9298-7305', surname='LeDue', initials='J.M.', givenname='Jeffrey M.', affiliation='Djavad Mowafaghian Centre for Brain Health', documents=37, affiliation_id='60083635', city='Vancouver', country='Canada', areas='MEDI (34); NEUR (32); BIOC (16)'), Author(eid='9-s2.0-57495733700', orcid=None, surname='LeDue', initials='J.M.', givenname='Jeffrey M.', affiliation='Université McGill', documents=9, affiliation_id='60002494', city='Montreal', country='Canada', areas='ENGI (10); PHYS (7); CHEM (4)')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lastname = \"ledue\" \n",
     "firstname = \"jeffrey m\"\n",
@@ -471,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
